# Broadway-Simulation

./: .gitignore  CMakeLists.txt  Testing.cpp  Testing.hpp  main.cpp
Engine/: Application.cpp  Application.h  CMakeLists.txt  InputModule.cpp  InputModule.h  InputModule.hpp  RenderingModule.cpp  RenderingModule.h  RenderingModule.hpp  SimulationManager.cpp  SimulationManager.h  SimulationManager.hpp  SingletonRandom.cpp  SingletonRandom.hpp  WindowModule.cpp  WindowModule.h  WindowModule.hpp
Engine/Artists/: Artist.cpp  Artist.hpp  ArtistsManager.cpp  ArtistsManager.hpp  CMakeLists.txt
Engine/CommandHandling/: CMakeLists.txt  Command.hpp
Engine/CommandHandling/Commands/: CMakeLists.txt  CollideWithPathCommand.cpp  CollideWithPathCommand.hpp  FastForwardCommand.cpp  FastForwardCommand.hpp  FileSelectionCommand.cpp  FileSelectionCommand.hpp  InfoCommand.cpp  InfoCommand.hpp  MouseInteractionCommand.cpp  MouseInteractionCommand.hpp  PlayPauseCommand.cpp  PlayPauseCommand.hpp  QuitCommand.cpp  QuitCommand.hpp  RenderArtistsCommand.cpp  RenderArtistsCommand.hpp  RenderCollisionInfoCommand.cpp  RenderCollisionInfoCommand.hpp  RenderPathCommand.cpp  RenderPathCommand.hpp  RenderVisitedCommand.cpp  RenderVisitedCommand.hpp  RewindCommand.cpp  RewindCommand.hpp  TileInteractionCommand.cpp  TileInteractionCommand.hpp
Engine/FileReading/: CMakeLists.txt  FileReaderTemplate.cpp  FileReaderTemplate.hpp  IParseStrategy.hpp  Source.hpp
Engine/FileReading/ArtistStrategy/: ArtistStrategy.hpp  CMakeLists.txt  CsvArtistStrategy.cpp  CsvArtistStrategy.hpp  IArtistStrategy.hpp
Engine/FileReading/MapStrategy/: CMakeLists.txt  IMapStrategy.hpp  TxtMapStrategy.cpp  TxtMapStrategy.hpp  XmlMapStrategy.cpp  XmlMapStrategy.hpp
Engine/FileReading/SourceStrategy/: CMakeLists.txt  FileSourceStrategy.cpp  FileSourceStrategy.hpp  ISourceStrategy.hpp  WebSourceStrategy.cpp  WebSourceStrategy.hpp
Engine/FileReading/TileStrategy/: TileStrategy.hpp
Engine/Memento/: CMakeLists.txt  Caretaker.cpp  Caretaker.hpp  Memento.cpp  Memento.hpp  MementoManager.cpp  MementoManager.hpp
Engine/Modules/: CMakeLists.txt  CollisionModule.cpp  CollisionModule.hpp  FileDialogModule.cpp  FileDialogModule.hpp  GUIModule.cpp  GUIModule.hpp  InputModule.cpp  InputModule.hpp  PathfindingModule.cpp  PathfindingModule.hpp  RenderingModule.cpp  RenderingModule.hpp  WindowModule.cpp  WindowModule.hpp
Engine/Modules/Alga/: CMakeLists.txt  CollisionModule.cpp  CollisionModule.hpp  PathfindingModule.cpp  PathfindingModule.hpp  Quadtree.cpp  Quadtree.hpp
Engine/Tiles/: Blue.cpp  Blue.hpp  CMakeLists.txt  Grey.hpp  Museum.cpp  Museum.hpp  MuseumBuilder.cpp  MuseumBuilder.hpp  Red.cpp  Red.hpp  Tile.cpp  Tile.hpp  TileState.hpp  White.cpp  Yellow.hpp
Engine/Tiles/TileStates/: Blue.cpp  Blue.hpp  CMakeLists.txt  Grey.cpp  Grey.hpp  Red.cpp  Red.hpp  TileState.cpp  TileState.hpp  White.cpp  White.hpp  Yellow.cpp  Yellow.hpp
assets/: artists.csv  graph.xml  grid.txt  split.txt  test.txt
libs/SDL2/include/SDL2/: SDL_events.h  SDL_filesystem.h  SDL_hints.h  SDL_surface.h
